src/elements/snapshots/laser_pdf__elements__align_location_bottom__tests__pre_break-2.snap
---
source: src/elements/align_location_bottom.rs
expression: output
---
ElementTestOutput {
    size: ElementSize {
        width: Some(
            12.0,
        ),
        height: Some(
            26.0,
        ),
    },
    breakable: Some(
        ElementTestOutputBreakable {
            break_count: 1,
            extra_location_min_height: Some(
                26.0,
            ),
            first_location_usage: WillSkip,
        },
    ),
}
