src/elements/snapshots/laser_pdf__elements__align_location_bottom__tests__unbreakable-2.snap
---
source: src/elements/align_location_bottom.rs
expression: output
---
ElementTestOutput {
    size: ElementSize {
        width: Some(
            12.0,
        ),
        height: Some(
            21.0,
        ),
    },
    breakable: None,
}
